--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
-title: "My Blogs Name"
-author: "Default Author Name"
-description: "Some short description of your blog can go here." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+title: "Shaamads Super Cool Blog"
+author: "Shaamad Allison"
+description: "This is my blog for cybersecurity competition writeup/posts and projects" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
-email: "example@mail.com"
+email: "sallison2021@fau.edu"
 twitter_username: "twitteruser"
-github_username: "githubuser"
-linkedin_username: "linkedinuser"
+github_username: "caol777"
+linkedin_username: "www.linkedin.com/in/shaamad-allison-a70341143"
 #facebook_username: username
 #flickr_username: username
 #instagram_username: username
