--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Shaamads Super Cool Blog"
 author: "Shaamad Allison"
-description: "This is my blog for cybersecurity competition writeup/posts and projects" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+description: "" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
