--- a/_config.yml
+++ b/_config.yml
@@ -5,14 +5,14 @@ description: "" # This will show up in places like twitter, linkedin, etc, if yo
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
 email: "sallison2021@fau.edu"
-twitter_username: "twitteruser"
 github_username: "caol777"
-linkedin_username: "www.linkedin.com/in/shaamad-allison-a70341143"
+linkedin_username: "shaamad-allison-a70341143"
+youtube_username: "@FAUCyberSecurityClub"
+
 #facebook_username: username
 #flickr_username: username
 #instagram_username: username
 #pinterest_username: username
-#youtube_username: username
 #googleplus_username: +username
 
 #########################################################################################
