--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: "" # This will show up in places like twitter, linkedin, etc, if yo
 # All of these are optional and can be removed or commented out
 email: "sallison2021@fau.edu"
 github_username: "caol777"
-linkedin_username: "shaamad-allison-a70341143"
+linkedin_username: "shaamad-allison"
 youtube_username: "@FAUCyberSecurityClub"
 
 #facebook_username: username
