--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,9 @@ youtube_username: "@FAUCyberSecurityClub"
 #########################################################################################
 ######### Nothing below needs to be changed (unless you know what you're doing) #########
 #########################################################################################
-theme: "minima"
-
+remote_theme: pages-themes/hacker@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
 rss: rss
 
 kramdown:
