--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ youtube_username: "@FAUCyberSecurityClub"
 ######### Nothing below needs to be changed (unless you know what you're doing) #########
 #########################################################################################
 
-theme: "pages-themes/midnight@v0.2.0"
+theme: "minma"
 rss: rss
 
 kramdown:
@@ -29,8 +29,6 @@ kramdown:
 plugins:
   - jekyll-feed
   - jekyll-sitemap
-  - jekyll-remote-theme 
-
 
 titles_from_headings:
   strip_title: true
