--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Shaamads Super Cool Blog"
+title: "Shaamad's Blog"
 author: "Shaamad Allison"
 description: "" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
