--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: "" # This will show up in places like twitter, linkedin, etc, if yo
 email: "sallison2021@fau.edu"
 github_username: "caol777"
 linkedin_username: "shaamad-allison"
-youtube_username: "FAUCybersecurityClub"
+youtube_username: "@FAUCybersecurityClub"
 
 #facebook_username: username
 #flickr_username: username
